--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -205,7 +205,7 @@ iframe {
 .login100-form-title {
     font-family: Ubuntu-Bold;
     font-size: 30px;
-    color: #403866;
+    color: #3675C3;
     line-height: 1.2;
     text-transform: uppercase;
     text-align: center;
@@ -230,7 +230,7 @@ iframe {
 
 .input100 {
     font-family: Ubuntu-Bold;
-    color: #403866;
+    color: #3675C3;
     line-height: 1.2;
     font-size: 18px;
     display: block;
@@ -252,7 +252,7 @@ iframe {
     top: -1px;
     left: -1px;
     pointer-events: none;
-    border: 1px solid #827ffe;
+    border: 1px solid #3675C3;
     border-radius: 3px;
     visibility: hidden;
     opacity: 0;
@@ -323,7 +323,7 @@ iframe {
     height: 18px;
     border-radius: 3px;
     background: #fff;
-    border: 2px solid #549bf7;
+    border: 2px solid #3675C3;
     left: 0;
     top: 50%;
     -webkit-transform: translateY(-50%);
@@ -334,7 +334,7 @@ iframe {
 }
 
 .input-checkbox100:checked+.label-checkbox100::before {
-    color: #549bf7;
+    color: #3675C3;
 }
 
 
@@ -367,7 +367,7 @@ iframe {
     padding: 0 20px;
     width: 100%;
     height: 62px;
-    background-color: #827ffe;
+    background-color: #3675C3;
     border-radius: 3px;
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
@@ -376,7 +376,7 @@ iframe {
 }
 
 .login100-form-btn:hover {
-    background-color: #403866;
+    background-color: rgb(60, 136, 228);
 }
 
 
