--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -68,7 +68,7 @@
 
 
             <div *ngIf="!cargando && notifications.length === 0" class="alert alert-warning text-center mt-3 animated fadeIn">
-                <h4 class="alert-heading">No hay notificaiones pendientes</h4>
+                <h4 class="alert-heading">No hay notificaciones pendientes</h4>
                 <p>
                     <i class="fa fa-exclamation fa-2x"></i>
                 </p>
