--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -67,7 +67,7 @@
                                 <label for="role">Rol:</label>
                                 <select class="form-control" [(ngModel)]="user.role" name="role" id="role"> 
                                     <option *ngFor="let rol of roles" 
-                                    [value]="rol.name">{{rol.name}}</option>
+                                    [value]="rol">{{rol}}</option>
                               </select>
                             </div>
                         </div>
