--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,9 +6,10 @@
                 <div class="row">
                     <div class="col-sm-3"></div>
                     <div class="col-sm-6">
-                        <br>
-                        <img src="../../../assets/images/logo.png" class="img-responsive">
-                        <br>
+                        <div class="image-content">
+                            <img class="alzaid-logo" src="../../../assets/images/logo.png">
+                        </div>
+
                     </div>
                     <div class="col-sm-3"></div>
 
