Corrección DR comida

--- a/src/app/pages/dailyrecord/dailyrecord.component.html
+++ b/src/app/pages/dailyrecord/dailyrecord.component.html
@@ -269,12 +269,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let m of dr.meal ">
-                            <td>{{m.quantity}}</td>
-                            <td>{{m.foodType}}</td>
-                            <td>{{m.independence}}</td>
-                            <td>{{m.functional}}</td>
-                            <td>{{m.chewingPerformance}}</td>
+                        <tr>
+                            <td>{{dr.meal.quantity}}</td>
+                            <td>{{dr.meal.foodType}}</td>
+                            <td>{{dr.meal.independence}}</td>
+                            <td>{{dr.meal.functional}}</td>
+                            <td>{{dr.meal.chewingPerformance}}</td>
                         </tr>
                     </tbody>
                 </table>
