--- a/src/app/pages/dailyrecord/dailyrecord.component.html
+++ b/src/app/pages/dailyrecord/dailyrecord.component.html
@@ -6,7 +6,7 @@
         <div class="col-lg-12">
 
             <h4><strong>Adulto: </strong>{{dr.patient.name}} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</h4>
-            <h4><strong>Fecha: </strong>{{dr.date |date:"dd-MM-yyyy" }}</h4>
+            <h4><strong>Fecha: </strong>{{dr.enterHour |date:"dd-MM-yyyy" }}</h4>
             <h4><strong>Hora entrada: </strong>{{dr.enterHour |date:"h:mm a" }}</h4>
             <h4 *ngIf="dr.exit"><strong>Hora salida: </strong>{{dr.exitHour |date:"h:mm a" }}</h4>
         </div>
