--- a/src/app/pages/dailyrecords/dailyrecords.component.html
+++ b/src/app/pages/dailyrecords/dailyrecords.component.html
@@ -33,7 +33,7 @@
             <tbody>
                 <tr *ngFor="let dr of drs| paginate: {itemsPerPage: 10, currentPage: p, totalItems: drs.lenght}; let i = index">
 
-                    <td>{{ dr.date |date:"dd-MM-yyyy" }}</td>
+                    <td>{{ dr.enterHour |date:"dd-MM-yyyy" }}</td>
                     <td>{{ dr.patient.name }} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</td>
                     <td>{{ dr.enterHour |date:"h:mm a"}}</td>
                     <td>{{ dr.exitHour |date:"h:mm a"}}</td>
