--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -10,7 +10,7 @@
 
 
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row text-right">
             <div class="col">
                 <button class="btn btn-danger" routerLink="/catalogs">
