--- a/src/app/pages/dailyrecords/dailyrecords.component.html
+++ b/src/app/pages/dailyrecords/dailyrecords.component.html
@@ -10,7 +10,7 @@
     <!--/.row-->
 
 
-    <div class="container">
+    <div class="container-fluid">
         <!-- <div class="row">
             <div class="col text-right">
                 <button routerLink="/patient/nuevo" class="btn btn-primary">
