--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
     <!--/.row-->
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="col-md-12">
             <div class="panel panel-default articles">
                 <div class="panel-heading">
