--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="limiter animated fadeInDown">
-
+<div class="container-fluid">
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
@@ -58,4 +58,5 @@
         <!-- /.col-->
     </div>
     <!-- /.row -->
+</div>
 </div>
