--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
 
         <div class="row text-right">
             <div class="col">
