--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -11,7 +11,7 @@
 
 
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row text-right">
             <div class="col">
                 <button class="btn btn-danger" routerLink="/users">
