--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -8,7 +8,7 @@
     <!--/.row-->
 
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col text-right">
                 <button routerLink="/user/nuevo" class="btn btn-primary">
