--- a/src/app/pages/catalogs/catalogs.component.html
+++ b/src/app/pages/catalogs/catalogs.component.html
@@ -49,7 +49,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let cat of catalogs | paginate: {itemsPerPage: 10, currentPage: p, totalItems: catalogs.lenght} | filter: filterSearch; let i = index">
+                <tr *ngFor="let cat of catalogs | paginate: {itemsPerPage: 10, currentPage: p, totalItems: catalogs.length} | filter: filterSearch; let i = index">
 
                     <td>{{ cat.name }} </td>
                     <td>{{ cat.type }}</td>
