--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -23,15 +23,18 @@
         <div class="clear"></div>
     </div>
     <div class="divider"></div>
-    <ul class="nav menu">
-        <li *ngIf="user.role=='ADMIN' || user.role=='COORDINADOR'" routerLinkActive="active"><a routerLink="/home"><em class="fa fa-home">&nbsp;</em> Inicio</a></li>
-        <li *ngIf="user.role=='ADMIN' || user.role=='COORDINADOR'" routerLinkActive="active"><a routerLink="/patients"><em class="fa fa-user-circle">&nbsp;</em> Pacientes</a></li>
-        <li *ngIf="user.role=='ADMIN' || user.role=='COORDINADOR'" routerLinkActive="active"><a routerLink="/caregivers"><em class="fa fa-address-book">&nbsp;</em> Familiares</a></li>
-        <li *ngIf="user.role=='ADMIN' || user.role=='COORDINADOR'" routerLinkActive="active"><a routerLink="/dailyrecords"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
-        <li *ngIf="user.role=='ADMIN' || user.role=='COORDINADOR'" routerLinkActive="active"><a routerLink="/catalogs"><em class="fa fa-cog">&nbsp;</em> Catálogos App </a></li>
-        <li *ngIf="user.role=='ADMIN' || user.role=='COORDINADOR'" routerLinkActive="active"><a routerLink="/users"><em class="fa fa-users">&nbsp;</em> Usuarios</a></li>
-        <li *ngIf="user.role=='FAMILIAR'" routerLinkActive="active"><a routerLink="/home"><em class="fa fa-home">&nbsp;</em> Familiar</a></li>
-        <!-- <li routerLinkActive="active"><a routerLink="/#"><em class="fa fa-bar-chart">&nbsp;</em> Gráficas</a></li> -->
+    <ul *ngIf="user.role=='ADMIN' || user.role=='COORDINADOR' || user.role=='PSICOLOGO'" class="nav menu">
+        <li routerLinkActive="active"><a routerLink="/home"><em class="fa fa-home">&nbsp;</em> Inicio</a></li>
+        <li routerLinkActive="active"><a routerLink="/patients"><em class="fa fa-user-circle">&nbsp;</em> Pacientes</a></li>
+        <li routerLinkActive="active"><a routerLink="/caregivers"><em class="fa fa-address-book">&nbsp;</em> Familiares</a></li>
+        <li routerLinkActive="active"><a routerLink="/dailyrecords"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
+        <li routerLinkActive="active"><a routerLink="/catalogs"><em class="fa fa-cog">&nbsp;</em> Catálogos App </a></li>
+        <li routerLinkActive="active"><a routerLink="/users"><em class="fa fa-users">&nbsp;</em> Usuarios</a></li>
+        <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
+    </ul>
+    <ul *ngIf="user.role=='ENFERMERIA' || user.role=='HIGIENE' || user.role=='FISIOTERAPIA' || user.role=='FASE_INICIAL' || user.role=='FASE_INTERMEDIA' || user.role=='FASE_AVANZADA' || user.role=='NUTRICION'" class="nav menu">
+        <li routerLinkActive="active"><a routerLink="/home"><em class="fa fa-home">&nbsp;</em> Inicio</a></li>
+        <li routerLinkActive="active"><a routerLink="/dailyrecords"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
     </ul>
 </div>
