--- a/src/app/pages/dailyrecordspatient/dailyrecordspatient.component.html
+++ b/src/app/pages/dailyrecordspatient/dailyrecordspatient.component.html
@@ -4,7 +4,9 @@
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Registros Diarios</h1>
+            <h1 class="page-header">Registros Diarios de {{patient.name}} {{patient.lastName}} {{patient.lastNameSecond}}</h1>
+
+
         </div>
     </div>
     <!--/.row-->
@@ -35,8 +37,8 @@
                     <td>{{ dr.exitHour |date:"h:mm a"}}</td>
                     <td>
                         <button class="btn btn-info mr-1" [routerLink]="['/dailyrecord', dr._id ]">
-                            <i class="fa fa-search"></i>
-                        </button>
+                          <i class="fa fa-search"></i>
+                      </button>
                     </td>
                 </tr>
             </tbody>
