--- a/src/app/pages/caregiver/caregiver.component.html
+++ b/src/app/pages/caregiver/caregiver.component.html
@@ -17,7 +17,7 @@
           Regresar
         </button>
             </div>
-            
+
         </div>
         <hr>
 
@@ -92,8 +92,11 @@
                         </div>
                         <div class="col-sm-3">
                             <div class="form-group">
-                                <label>Ocupación</label>
-                                <input type="text" formControlName="occupation" class="form-control" placeholder="Ocupación">
+                                <label for="occupation">Ocupación:</label>
+                                <select class="form-control" formControlName="occupation" id="occupation">
+                                <option *ngFor="let o of occupations" 
+                                [value]="o">{{o}}</option>
+                              </select>
                             </div>
                         </div>
                         <div class="col-sm-3">
@@ -109,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-<hr>
+                    <hr>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
@@ -131,7 +134,7 @@
                         </div>
                     </div>
 
-<hr>
+                    <hr>
 
                     <div class="row">
                         <div class="col-sm-6">
@@ -148,7 +151,7 @@
                         </div>
                     </div>
 
-            <small class="form-text">* Estos campos son requeridos.</small>
+                    <small class="form-text">* Estos campos son requeridos.</small>
                     <hr>
                     <div class="form-group text-center">
                         <button type="submit" class="btn btn-primary btn-lg">
