Listado de autodiagnósticos

--- a/src/app/pages/self-diagnosis/self-diagnosis.component.html
+++ b/src/app/pages/self-diagnosis/self-diagnosis.component.html
@@ -30,17 +30,17 @@
                         <div class="col-sm-11">
                             <table class="table table-bordered">
                                 <tr>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=0 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">0</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=10 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">10</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=20 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">20</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=30 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">30</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=40 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">40</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=50 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">50</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=60 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">60</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=70 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">70</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=80 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">80</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=90 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">90</label></th>
-                                    <th><label class="radio-inline"><input type="radio" id="respuesta{{i+1}}" [value]=100 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">100</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=0 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">0</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=10 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">10</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=20 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">20</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=30 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">30</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=40 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">40</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=50 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">50</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=60 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">60</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=70 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">70</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=80 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">80</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=90 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">90</label></th>
+                                    <th><label class="radio-inline"><input type="radio" [value]=100 name="respuesta{{i+1}}" formControlName="respuesta{{i+1}}">100</label></th>
                                 </tr>
                             </table>
                         </div>
