--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -40,7 +40,7 @@
     <ul *ngIf="user.role=='FAMILIAR'" class="nav menu">
         <!-- <li routerLinkActive="active"><a routerLink="/home"><em class="fa fa-home">&nbsp;</em> Inicio</a></li> -->
         <li routerLinkActive="active"><a routerLink="/dailyrecordspatient"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
-        <li routerLinkActive="active"><a routerLink="/selfdiagnosis"><em class="fa fa-edit">&nbsp;</em> Auto Diagnóstico </a></li>        
+        <li routerLinkActive="active"><a routerLink="/autodiagnosis"><em class="fa fa-edit">&nbsp;</em> Auto Diagnóstico </a></li>
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
     </ul>
 </div>
