--- a/src/app/pages/dailyrecordspatient/dailyrecordspatient.component.html
+++ b/src/app/pages/dailyrecordspatient/dailyrecordspatient.component.html
@@ -14,54 +14,57 @@
 
     <div class="container-fluid">
 
-        <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
-        <table *ngIf="!cargando && drs.length > 0" class="table mt-3 table-hover animated fadeIn">
-            <thead class="thead-dark">
-                <tr>
+        <div class="row animated fadeIn faster">
+            <div class="col">
+                <pagination-controls (pageChange)="p = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
+                <table *ngIf="!cargando && drs.length > 0" class="table mt-3 table-hover animated fadeIn">
+                    <thead class="thead-dark">
+                        <tr>
 
-                    <th scope="col">Fecha</th>
-                    <th scope="col">Paciente</th>
-                    <th scope="col">Fase</th>
-                    <th scope="col">Hora entrada</th>
-                    <th scope="col">Hora salida</th>
-                    <th scope="col">Opciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let dr of drs| paginate: {itemsPerPage: 10, currentPage: p, totalItems: drs.length}; let i = index">
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Paciente</th>
+                            <th scope="col">Fase</th>
+                            <th scope="col">Hora entrada</th>
+                            <th scope="col">Hora salida</th>
+                            <th scope="col">Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let dr of drs| paginate: {itemsPerPage: 10, currentPage: p, totalItems: drs.length}; let i = index">
 
-                    <td>{{ dr.enterHour |date:"dd-MM-yyyy" }}</td>
-                    <td>{{ dr.patient.name }} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</td>
-                    <td>{{ dr.patient.phase}}</td>
-                    <td>{{ dr.enterHour |date:"h:mm a"}}</td>
-                    <td>{{ dr.exitHour |date:"h:mm a"}}</td>
-                    <td>
-                        <button class="btn btn-info mr-1" [routerLink]="['/dailyrecord', dr._id ]">
+                            <td>{{ dr.enterHour |date:"dd-MM-yyyy" }}</td>
+                            <td>{{ dr.patient.name }} {{dr.patient.lastName}} {{dr.patient.lastNameSecond}}</td>
+                            <td>{{ dr.patient.phase}}</td>
+                            <td>{{ dr.enterHour |date:"h:mm a"}}</td>
+                            <td>{{ dr.exitHour |date:"h:mm a"}}</td>
+                            <td>
+                                <button class="btn btn-info mr-1" [routerLink]="['/dailyrecord', dr._id ]">
                           <i class="fa fa-search"></i>
                       </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
 
-        <div *ngIf="!cargando && drs.length === 0" class="alert alert-warning text-center mt-3 animated fadeIn">
-            <h4 class="alert-heading">No existe información</h4>
-            <p>
-                <i class="fa fa-exclamation fa-2x"></i>
-            </p>
-            <p class="mb-0">
-            </p>
+                <div *ngIf="!cargando && drs.length === 0" class="alert alert-warning text-center mt-3 animated fadeIn">
+                    <h4 class="alert-heading">No existe información</h4>
+                    <p>
+                        <i class="fa fa-exclamation fa-2x"></i>
+                    </p>
+                    <p class="mb-0">
+                    </p>
+                </div>
+
+                <div *ngIf="cargando" class="alert alert-info text-center mt-3 animated fadeIn">
+                    <h4 class="alert-heading">Cargando</h4>
+                    <p>
+                        <i class="fa fa-refresh fa-spin fa-2x"></i>
+                    </p>
+                    <p class="mb-0">
+                        Espere por favor
+                    </p>
+                </div>
+            </div>
         </div>
-
-        <div *ngIf="cargando" class="alert alert-info text-center mt-3 animated fadeIn">
-            <h4 class="alert-heading">Cargando</h4>
-            <p>
-                <i class="fa fa-refresh fa-spin fa-2x"></i>
-            </p>
-            <p class="mb-0">
-                Espere por favor
-            </p>
-        </div>
-
     </div>
 </div>
